jdk16 and 17 where possible yet (#437)
* jdk16 and 17 where possible yet
* gradle 7.2
* shutodwn hook for kafka consumer